# easycwmp-uet

./: .project  CMakeLists.txt  README
ext/openwrt/config/: easycwmp
ext/openwrt/init.d/: easycwmpd
ext/openwrt/scripts/: .easycwmp.sh.un~  easycwmp.sh  easycwmp.sh~
ext/openwrt/scripts/functions/common/: .common.un~  common  common~
ext/openwrt/scripts/functions/tr181/: .dhcpv4.un~  .wifi.un~  dhcpv4  wifi
